Resolves: tdf#120885 Crash on choosing 'more styles'

switching to the sidebar destroys the control currently active,
just post the event to happen on the next event loop

Change-Id: I3e9b629821fa43d8f29e419e72f66ed46d72fdbb
Reviewed-on: https://gerrit.libreoffice.org/65542
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>